# CMakeList.txt : CMake project for MD2Header, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("MD2Header")

# Add source to this project's executable.
add_executable (MD2Header "MD2Header.cpp" "MD2Header.h")

# TODO: Add tests and install targets if needed.
